# s3-medallion

./: .gitignore  README.md  pyproject.toml  test.py
data/bronze/: bronze_layer_raw.csv
data/gold/: active_users.csv  demographic_analytics.csv  exec_dashboard.csv  status_summary.csv  time_analytics.csv  yearly_growth.csv
data/processed/: silver_layer_clean.parquet
data/raw/: bronze_layer_raw.csv
data/silver/: silver_layer_clean.parquet
src/: config.py  data_generator.py  main.py  processor.py  s3_uploader.py
src/data_generation/: data_generator.py  generator.py
src/data_modeling/: aggregators.py
src/data_processing/: cleaner.py
src/pipelines/: aggregators.py  data_generator.py  processor.py
src/utils/: s3_client.py
