[project]
name = "s3-medallion"
version = "0.1.0"
description = ""
authors = [
    {name = "sch-paulo",email = "pschmitzjr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "faker (>=37.0.2,<38.0.0)",
    "boto3 (>=1.37.16,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
